--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^2.0.0",
     "@ngrx/store": "^2.2.1",
+    "@angular/material":"^2.0.0-beta.1",
     "angularfire2": "^2.0.0-beta.7",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
