--- a/package.json
+++ b/package.json
@@ -17,33 +17,34 @@
     "start": "node server.js",
     "deploy": "git push origin master && git push heroku master"
   },
-  "private": true, 
+  "private": true,
   "dependencies": {
     "@angular/common": "^2.3.1",
     "@angular/compiler": "^2.3.1",
+    "@angular/compiler-cli": "^2.3.1",
     "@angular/core": "^2.3.1",
     "@angular/flex-layout": "^2.0.0-beta.1",
     "@angular/forms": "^2.3.1",
     "@angular/http": "^2.3.1",
+    "@angular/material": "^2.0.0-beta.1",
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^2.0.0",
     "@ngrx/store": "^2.2.1",
-    "@angular/material":"^2.0.0-beta.1",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "^6.0.42",
+    "angular-cli": "^1.0.0-beta.24",
     "angularfire2": "^2.0.0-beta.7",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
+    "express-request-language": "^1.1.9",
     "firebase": "^3.6.4",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2",
-    "angular-cli": "^1.0.0-beta.24",
-    "@angular/compiler-cli": "^2.3.1",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "typescript": "~2.0.3"
+    "typescript": "~2.0.3",
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "codelyzer": "~2.0.0-beta.1",
