--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/compiler": "^2.3.1",
     "@angular/compiler-cli": "^2.3.1",
     "@angular/core": "^2.3.1",
-    "@angular/flex-layout": "^2.0.0-beta.1",
+    "@angular/flex-layout": "git+https://github.com/angular/flex-layout-builds.git",
     "@angular/forms": "^2.3.1",
     "@angular/http": "^2.3.1",
     "@angular/material": "^2.0.0-beta.1",
@@ -61,7 +61,7 @@
     "ts-node": "1.2.1",
     "tslint": "^4.0.2"
   },
-  "engines": { 
+  "engines": {
     "node": "6.9.1",
     "npm": "3.10.8"
   }
