--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/compiler": "^2.3.1",
     "@angular/compiler-cli": "^2.3.1",
     "@angular/core": "^2.3.1",
-    "@angular/flex-layout": "git+https://github.com/angular/flex-layout-builds.git",
+    "@angular/flex-layout": "^2.0.0-beta.1",
     "@angular/forms": "^2.3.1",
     "@angular/http": "^2.3.1",
     "@angular/material": "^2.0.0-beta.1",
